--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,178 +1,255 @@
-/*  */
-
+/* core colors for page */
 :root {
-    --main-light: rgb(41, 41, 41, 0.75);
-    --main: rgb(41, 41, 41);
-    --text: rgb(229, 228, 228);
+  --main-light: rgb(41, 41, 41, 0.75);
+  --main: rgb(41, 41, 41);
+  --text: rgb(229, 228, 228);
+  --border: rgb(114, 140, 167);
+  --hover: rgb(239, 239, 157);
 }
 
 * {
-    font-family: 'Trebuchet MS', Arial, sans-serif;
-    box-sizing: border-box;
+  font-family: "Trebuchet MS", Arial, sans-serif;
+  box-sizing: border-box;
 }
 
+/* flex elements*/
+
+header,
+.header-nav ul,
+.bio,
+.main-card,
+.card,
+.projects,
+#proj1,
+#proj2,
+#contact,
+#contact ul,
+.bottom {
+  display: flex;
+}
+.projects,
+#proj2,
+#contact {
+  flex-wrap: wrap;
+}
+
+.bio,
+#proj2,
+#contact {
+  justify-content: flex-end;
+}
+
+/* header styling */
+
 header {
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: var(--main);
-    height: 150px;
-    background-image: url(./background-images/header.png);
-    background-size: cover;
-    background-position: center;
+  align-items: flex-end;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: var(--main);
+  height: 150px;
+  background-image: url(./background-images/header.png);
+  background-size: cover;
+  background-position: center;
 }
 
 #title {
-    font-size: 38px;
-    margin-right: 20px;
-    color: var(--text);
-    background-color: var(--main-light);
-    padding: 7px;
-    border-radius: 10px;
+  font-size: 38px;
+  margin-right: 20px;
+  color: var(--text);
+  background-color: var(--main-light);
+  padding: 7px;
+  border-radius: 10px;
 }
 
 .header-nav ul {
-    list-style: none;
-    display: flex;
-    padding: 10px;
-    background-color: var(--main-light);
-    border-radius: 10px;
+  list-style: none;
+  padding: 10px;
+  background-color: var(--main-light);
+  border-radius: 10px;
 }
 
 .header-nav li {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 
 #last {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 .header-nav a {
-    text-decoration: none;
-    font-size: 30px;
-    color: var(--text);
+  text-decoration: none;
+  font-size: 30px;
+  color: var(--text);
 }
 
+/* styling for main page */
 
-main {
-
+h2 {
+  padding: 30px;
+  font-size: 30px;
+  border-right: 3px solid var(--border);
+  margin-top: 10px;
+  margin-right: 30px;
+  margin-bottom: 20px;
+  height: auto;
 }
 
-.main-card, .card {
-    min-height: 200px;
-    padding: 20px;
-    border: 3px solid var(--main-light);
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
-
-}
-
-.main-card {
-    width: 81%;
-    margin: 10px;
-    background-image: url(./background-images/main-img.png);
-    background-size: cover;
-    background-position: top;
-}
-
-.card {
-    width: 40%;
-    margin: 5px 10px;
-    background-size: cover;
-    background-position: center;
-}
-
-
-
-.projects {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    margin-right: 50px;
-}
-
-.info {
-    background-color: var(--main-light);
-    color: var(--text);
-    padding: 5px;
-    border-radius: 5px;
-    font-size: 20px;
-}
-/* attatching a background image to each card item */
-#card-2 {
-    background-image: url(./background-images/Mario.64.jpeg);
-}
-
-#card-3 {
-    background-image: url(./background-images/stock-3.jpeg);
-}
-
-#card-4 {
-    background-image: url(./background-images/stock-4.jpeg);
-}
-
-#card-5 {
-    background-image: url(./background-images/stock-5.jpg);
-}
-
-
-
-aside {
-    padding: 30px;
-    font-size: 30px;
-    border-right: 3px solid blue;
-    margin-top: 10px;
-    margin-right: 100px;
-    margin-bottom: 20px;
-    height: auto;
-}
-
+/* about section styling */
 .bio {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    margin-right: 50px;
+  margin-right: 50px; 
 }
 
 .para {
-    width: 81%;
-    padding: 60px;
-    margin: 10px;
-    font-size: 18px;
-}
-#contact {
-    display: flex;
-    justify-content: flex-end;
-
-}
-#contact ul {
-    list-style: none;
-    display: flex;
-    padding: 50px;
-    border-radius: 10px;
-    width: 82%;
-    font-size: 20px;
+  width: 80%;
+  padding: 60px;
+  margin: 10px;
+  font-size: 18px;
 }
 
-#contact li {
-    padding: 30px;
-    margin: 20px 30px;
-    border: 2px solid var(--main-light);
-    border-radius: 8px;
+.main-card,
+.card {
+  /* work section styling */
+  min-height: 200px;
+  padding: 20px;
+  border: 3px solid var(--main-light);
+  justify-content: flex-start;
+  align-items: flex-end;
+  filter: brightness(0.5);
+}
+
+.main-card:hover,
+.card:hover {
+  filter: brightness(1);
+  cursor: grab;
+}
+
+.main-card {
+  width: 100%;
+  margin: 10px;
+  background-image: url(./background-images/main-img.png);
+  background-size: cover;
+  background-position: top;
+  flex: 0 0 100%;
+}
+
+.card {
+  width: 50%;
+  margin: 5px 10px;
+  background-size: cover;
+  background-position: center;
+  flex: 0 0 48%;
+}
+
+.projects {
+  justify-content: center;
+}
+
+#proj1 {
+  width: 98%;
+}
+
+#proj2 {
+  width: 100%;
+}
+
+.info {
+  background-color: var(--main-light);
+  color: var(--text);
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 20px;
+}
+/* card background images */
+#card-2 {
+  background-image: url(./background-images/Mario.64.jpeg);
+}
+
+#card-3 {
+  background-image: url(./background-images/stock-3.jpeg);
+}
+
+#card-4 {
+  background-image: url(./background-images/stock-4.jpeg);
+}
+
+#card-5 {
+  background-image: url(./background-images/stock-5.jpg);
 }
 
 a {
-    text-decoration: none;
-    color: var(--main);
+  width: 100%;
+  text-decoration: none;
+  color: var(--main);
+}
+ /* contact section styling */
+#contact {
+    margin: 10px;
+  width: 100%;
+  margin-right: 10px;
+}
+#contact ul {
+  list-style: none;
+  justify-content: center;
+  padding: 20px;
+  width: 80%;
+  font-size: 20px;
 }
 
-@media screen and (max-width: 992px){
-    header {
-        background-image: url(./background-images/header-thin.png);
-        background-size: cover;
-        background-position: center;
-        flex-direction: column;
-    }
+#contact li {
+  padding: 10px;
+  margin: 20px 30px;
+}
+
+/* footer */
+
+.bottom {
+  justify-content: center;
+}
+
+footer {
+  margin: 30px 0;
+}
+/* styling changes for narrower screens */
+
+@media screen and (max-width: 992px) {
+  * {
+    flex-direction: column;
+  }
+  header {
+    background-image: url(./background-images/header-thin.png);
+    background-size: cover;
+    background-position: center;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #title {
+    font-size: 30px;
+    margin-bottom: 10px;
+  }
+  h2 {
+    text-decoration: underline;
+    border: none;
+    text-decoration-color: var(--border);
+  }
+
+  main {
+    align-items: center;
+  }
+
+  .bottom {
+    align-items: center;
+  }
+
+  .para {
+    width: 100%;
+  }
+  .projects {
+  }
+  .card {
+    width: 100%;
+    margin: 10px;
+  }
+  .header-nav a {
+    font-size: 18px;
+  }
 }
